typescript/checker/tests/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens6.ts.stderr
error: Expected unicode escape
 --> $DIR/tests/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens6.ts:1:9
  |
1 | /*foo*/ \
  |         ^

